# aspora-tms

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  orchestrator.py  pyproject.toml  run.py
.claude/commands/: dev-java.md  observability-alerts.md  observability-metrics.md  save-decisions.md
.githooks/: update-progress
agents/: base.py
agents/fx_analyst/: __init__.py  agent.py
agents/liquidity/: agent.py  forecaster.py  multipliers.py  rate_resolver.py  rda_checker.py
agents/operations/: agent.py  clearbank_bank_api.py  clearbank_client.py  fund_mover.py  maker_checker.py  window_manager.py
api/: app.py  auth.py  schemas.py
api/routers/: balances.py  clearbank.py  deals.py  dev.py  events.py  exposure.py  forecast.py  holidays.py  pnl.py  risk.py  (+3 more)
baniya_buddhi/: README.md
bus/: base.py  consumer.py  events.py  memory_bus.py  publisher.py  redis_bus.py
config/: settings.py
data/: fx_predictor_client.py  metabase.py
docs/: KANBAN.md  LOCAL_DEPLOYMENT.md  PROGRESS.md  SPEC.md
frontend/: next.config.ts  package-lock.json  package.json
fx_band_predictor/: .gitignore  README.md
models/: domain.py
scripts/: demo_e2e.py  fx_forecast_vs_actual.py
services/: audit_log.py  calendar_service.py  guardrail_service.py  sheets_balance_sync.py
tests/: test_audit_findings.py  test_calendar_service.py  test_dashboard_api.py  test_domain_models.py  test_event_bus.py  test_forecaster.py  test_fund_mover.py  test_fx_analyst_agent.py  test_holiday_prefunding.py  test_integration_e2e.py  test_liquidity_fx_band.py  test_load_chaos.py  test_maker_checker.py  test_operations_agent.py  test_rate_resolver.py  test_window_manager.py
(+292 files in other folders)
